/*
 * Copyright 2024 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.google.android.ground.proto";
option java_multiple_files = true;

import "com/google/ground/geometry.proto";
import "com/google/ground/audit_info.proto";

// A location of interest (LOI, presented to the user as "[data collection]
// sites"). All data submitted by data collectors is associated with an LOI.
message LocationOfInterest {
    // Required. A system-defined ID for this LOI.
    string id = 1;

    // Required. The geometry associated with this LOI.
    Geometry geometry = 2;

    // A user-defined ID for this location of interest.
    string custom_id = 3;

    // The number of submissions associated with this LOI.
    int32 submission_count = 4;

    AuditInfo created = 5;

    AuditInfo last_modified = 6;
}
